--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,41 @@
-* {
+body * {
     font-family: Arial, Helvetica, sans-serif;
+    color: #777;
 }
-header>h1 {
+
+#masthead {
+  width: 100%;
+  margin: 0 auto;
+  background-color: #fff;
+  border-bottom: 2px solid #ccc;
+  padding: 0;
+}
+
+#masthead>div {
+  width: 960px;
+  margin: auto;
+}
+
+hr {
+  border-top: 1px solid #ccc;
+}
+
+header {
     background-color: #4aaaa5;
     color: #fff;
     width: 9em;
     text-align: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 28px;
+    padding: 30px 20px;
+    position: relative;
+    left: -20px;
 }
 
 h2 {
     color: #4aaaa5;
     font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 28px;
     clear: both;
 }
 
@@ -28,6 +53,16 @@ nav>ul {
   nav ul li {
     display: inline;
     float: left;
+    font-size: 18px;
+  }
+
+  nav ul li :hover{
+    text-decoration: underline;
+  }
+
+  nav ul li:nth-child(2){
+    border-left: 1px solid #999;
+    border-right: 1px solid #999;
   }
   
 a {
@@ -36,4 +71,79 @@ a {
   padding: 8px;
   color: #777777;
   text-decoration: none;
+}
+
+#mainContent {
+  background-color: #fff;
+  border: 1px solid #ccc;
+  width: 960px;
+  margin: 20px auto;
+  padding: 20px;
+}
+
+.gallery {
+  display: flex;
+  flex-flow: row wrap;
+  align-content: flex-start;
+}
+
+img {
+  margin: 10px;
+}
+.gallery label {
+  width: 200px;
+  height: 30px;
+  background-color: #4aaaa5;
+  color: white;
+  text-align: center;
+  padding: 10px 0 0 0;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  position: relative;
+  right: 210px;
+  top: 160px;
+}
+
+p {
+  padding-bottom: 12px;
+  line-height: 1.5em;
+}
+
+#headshot {
+  float: left;
+  margin: 10px 15px 20px 0;
+}
+footer {
+  text-align: center;
+  color: #ccc;
+  font-size: 12px;
+  background-color: #666666;
+  border-top: 8px solid #4aaaa5;
+  padding: 20px;
+  position: sticky;
+  bottom: 0;
+}
+
+input, textarea {
+  width: 100%;
+  height: 20px;
+  margin: 5px 0 20px 0;
+  border: 1px solid #ccc;
+}
+
+textarea {
+  height: 120px;
+
+}
+
+button {
+  color: #fff;
+  font-size: 16px;
+  background-color: #4aaaa5;
+  padding: 15px;
+  border: 2px solid #ccc;
+}
+
+button:hover {
+  cursor: pointer;
+  border: 2px solid #1a6360;
 }
